# intro-course

./: .gitignore  .gitmodules  0_basics_intro.md  0_intro.md  10_cargo_crates_and_registries.md  1_bindings_and_types.md  1_getting_started.md  2_bindings_and_types.md  2_data_and_structure.md  2_expressions_and_control_flow.md  3_data_and_structure.md  3_expressions_and_control_flow.md  3_not_so_basic_types.md  4_expressions_and_control_flow.md  4_move_semantics.md  5_data_and_structure.md  6_move_semantics.md  7_collections_and_iteration.md  8_testing.md  9_cargo_and_crates_io.md  Cargo.toml  Details-on-Rust-Collections.md  README.md  Rust-und-C++.md  actors_top_to_bottom.md  consequences_of_rigorosity.md  gears.link  intro-course-day-1.code-workspace  justfile  language-basics-01.md  linkify.toml  luhn-algorithm-project.md  not-so-basic-types.md  orphan slides.md  promises  snippets.json  the_rust_values.md
Cargo-Crates-and-Registries/: Cargo-Crates-and-Registries.md
Cargo_and_Crates_io/: Cargo_and_Crates_io.md
HelloRustGettingStarted/: HelloRustGettingStarted.md
Protohackers-Problem-6/: Protohackers-Problem-6.md
Smart-Pointer-in-Rust-und-C++/: Smart-Pointer-in-Rust-und-C++.md
images/: conveyor.link  gears.link
projects/discriminated_union/: generated_by_buildrs.h
projects/gzip_roundtrip/: Cargo.toml
projects/maybe/: Cargo.toml
projects/simple_snippets/: Cargo.toml
snippets/discriminated_union/: Cargo.toml  build.rs  generated_by_buildrs.h
snippets/discriminated_union/disc_union/: disc_union.h
snippets/discriminated_union/src/: main.rs
(+23 files in other folders)
