[workspace]
resolver = "2"

members = [
    "projects/discriminated_union",
    "projects/fizzbuzz_iterator",
    "projects/gzip_roundtrip",
    "projects/maybe",
    "projects/simple_server",
    "projects/simple_snippets",
    "projects/simple_tests",
    "projects/to_byte_slice",
    "projects/traffic_light",
]

exclude = ["achat"]
