[workspace]
resolver = "2"

members = [
    # snippets
    "snippets/discriminated_union",
    "snippets/fizzbuzz_iterator",
    "snippets/gzip_roundtrip",
    "snippets/maybe",
    "snippets/simple_server",
    "snippets/simple_snippets",
    "snippets/simple_tests",
    "snippets/to_byte_slice",
    "snippets/traffic_light",

    # projects
    "luhns-algorithm-exercise",
    "msg-repeater",
    "wpdl",
]

exclude = [
    "julia-set-renderer", # because its CI is complex due to installing shared objects for gui
    "achat",              # because its CI is complex due to installing shared objects for gui
]
